<resources>
    <string name="facebook_app_id">1768939200040744</string>
    <string name="fb_login_protocol_scheme">fb1768939200040744</string>

    <string name="app_name">FIUBA Cursos</string>
    <string name="title_activity_main">Cursos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_facebook">INGRESAR CON FACEBOOK</string>
    <string name="btn_google">INGRESAR CON GOOGLE</string>
    <string name="course_coming_soon">Próximamente</string>
    <string name="txt_courses">Cursos</string>
    <string name="txt_my_courses">Mis Cursos</string>
    <string name="txt_example_name">Matías</string>
    <string name="txt_example_surname">Carreras</string>
    <string name="txt_example_email">matias.carreras@gmail.com</string>
    <string name="search_category_no_results">"No hay cursos pertenecientes a la categoría "</string>
    <string name="search_name_no_results">" ni cuyos nombres contengan la palabra "</string>
    <string name="search_no_results">"No se obtuvieron resultados."</string>
    <string name="search_title">Resultados de la Búsqueda</string>
    <string name="facebook_cancel_login">Inicio de sesión con Facebook cancelado</string>
    <string name="txt_certificates">Certificados</string>
    <string name="txt_exit">Salir</string>
    <string name="exit_dialog_txt">¿Estas seguro que quieres terminar la sesión?</string>
    <string name="yes">Si</string>
    <string name="No">No</string>
    <string name="double_click_to_exit">Toca de nuevo para salir</string>
    <string name="facebook_success_login">Ha iniciado sesión con Facebook correctamente!</string>
    <string name="google_success_login">Ha iniciado sesión con Google correctamente!</string>
    <string name="txt_teacher">Docente:</string>
    <string name="txt_teacher_example"> - </string>
    <string name="txt_helpers">Ayudantes:</string>
    <string name="txt_helpers_example"> - </string>
    <string name="units_title">UNIDADES</string>
    <string name="txt_inscription">Inscripción:</string>
    <string name="txt_inscription_example">19/09 - 28/09</string>
    <string name="txt_start_date_example">26/09/16</string>
    <string name="txt_start_date">Fecha de Inicio:</string>
    <string name="google_login_failed">Hubo un error al iniciar sesion con Google. Por favor, intente nuevamente!</string>
    <string name="facebook_login_error">Hubo un error al iniciar sesion con Facebook. Por favor, intente nuevamente.</string>
    <string name="image_of_the_course">Image of the Course</string>
    <string name="identification_for_inscripted_courses">Identification for inscripted courses</string>
    <string name="inscription_success">Se ha inscripto en el curso satisfactoriamente!</string>
    <string name="unsubscription_success">Se ha dado de baja del curso satisfactoriamente!</string>
    <string name="exam_info">\u25CF Las preguntas tienen <b>una o mas opciones correctas</b>.\n\u25CF Se aprueba con nota mayor o igual a 6.\n\u25CF Tiene una semana para realizar el examen</string>
    <string name="unit_detail_alert">Debes estar inscripto para ver el contenido!</string>
    <string name="error">error</string>
    <string name="exam_title">"Examen - Unidad "</string>
    <string name="facebook">Facebook</string>
    <string name="subtitles_selector">Idioma</string>
    <string name="pass_exam">"Examen Rendido - Nota: "</string>
    <string name="pass_final_exam">"Examen Final Rendido - Nota: "</string>
    <string name="exam_info_title">Pautas</string>
    <string name="gotIt_btn">Entendido</string>
    <string name="inscription_text">Inscribirse</string>
    <string name="unsubscription_text">Desinscribirse</string>
    <string name="finish_exam">Terminar</string>
    <string name="rendir_examen">Rendir Examen</string>
    <string name="practice_exam">Practicar Examen</string>
    <string name="no_my_courses">No se encuentra inscripto a ningun curso!</string>
    <string name="no_soon_courses">No hay cursos proximos a empezar!</string>
</resources>
