<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:weightSum="1"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/profile_default"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#ffffff"
            android:text="@string/txt_example_name"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#ffffff"
            android:text="@string/txt_example_surname"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/txt_example_email"
        android:textSize="14sp"
        android:textStyle="normal"/>

</LinearLayout>




