<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/course_description"/>

                    <View
                        android:layout_width="300dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/darker_gray"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:id="@+id/course_teacher"
                            android:textSize="15sp"
                            android:text="@string/txt_teacher"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="15sp"
                            android:id="@+id/course_teacher_name"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/course_helpers"
                            android:visibility="gone"
                            android:textSize="15sp"
                            android:text="@string/txt_helpers"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:visibility="gone"
                            android:textSize="15sp"
                            android:id="@+id/course_helpers_name"
                            android:text="@string/txt_helpers_example"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/start_date_txt"
                            android:textSize="15sp"
                            android:text="@string/txt_start_date"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="15sp"
                            android:id="@+id/start_date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/inscription_label"
                            android:textSize="15sp"
                            android:text="@string/txt_inscription"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="15sp"
                            android:id="@+id/inscription_dates"/>
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/inscription_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="#8BC34A"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/inscription_text"/>

        <Button
            android:id="@+id/unsubscription_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="#B71C1C"
            android:textColor="#ffffff"
            android:visibility="gone"
            android:textStyle="bold"
            android:text="@string/unsubscription_text"/>

    </LinearLayout>

</FrameLayout>